test/analyzer/inputs/valid/good-single-dec.yah
dog is "animal"

animal is (x)->
    dog is "puppy"
    spit x
