test/analyzer/inputs/invalid/params-mismatch.yah
givenum is (x::int) ->
    spit x
givenum("Frog")
